# sip-algo-trading

./: .gitignore  Makefile  README.md  config.json  docker-compose.yml  main.py  phase1_test.db  phase1_verification.py  pyproject.toml  requirements.txt  scheduler.py  steup.py  test_phase1.db  test_system.py  test_trading_system.db  trading_data.db  web_api.py
auth/: __init__.py  models.py  schemas.py  tokens.py
brokers/: base_broker.py  zerodha_broker.py
config/: settings.py
data/: market_data.py  storage.py
database/: models.py
orders/: order_manager.py
sip_algo_trading.egg-info/: SOURCES.txt  requires.txt  top_level.txt
utils/: helpers.py
