[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sip-algo-trading"
version = "0.1.0"
description = "SIP Algorithmic Trading System for Indian Stock Markets"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = [
    "algorithmic trading",
    "SIP",
    "systematic investment plan",
    "indian stock market",
    "trading bot",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "yfinance>=0.2.18",
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "pytz>=2023.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "SQLAlchemy>=2.0.19",
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "pydantic>=2.3.0",
    "celery>=5.3.1",
    "redis>=4.6.0",
    "schedule>=1.2.0",
    "structlog>=23.1.0",
    "httpx>=0.24.1",
    "pyyaml>=6.0.1",
    "marshmallow>=3.20.1",
    "python-dateutil>=2.8.2",
    "click>=8.1.7",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "pre-commit>=3.3.3",
]
zerodha = [
    "kiteconnect>=4.0.0",
]
analysis = [
    "scipy>=1.11.1",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "jupyter>=1.0.0",
    "plotly>=5.15.0",
]

[project.scripts]
sip-trading = "main:main"
sip-scheduler = "scheduler:run_scheduler"
sip-api = "web_api:main"
sip-test = "test_system:main"

[project.urls]
Homepage = "https://github.com/ItsMePatidar/sip-algo-trading"
Repository = "https://github.com/ItsMePatidar/sip-algo-trading"
Issues = "https://github.com/ItsMePatidar/sip-algo-trading/issues"

[tool.setuptools]
packages = ["config", "data", "brokers", "orders", "utils"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["config", "data", "brokers", "orders", "utils"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]